try fixing hover scrollbar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,9 @@ table {
 }
 ::-webkit-scrollbar-thumb{
     background-color: red;
-    /* border-radius: 10%; */
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: red;
 }
 /* End of Scrollbar */
 
